- MySQLEvent did not put eventId in type tables for event types with no fields,   making it impossible to add values to events created before fields were added to the type.   Also added eventIds to the Basic Event table in the test data sql script to comply with this.
- Fixed nullpointer when editing event types with no description in some fields

- Added asterisks on the register page to denote required fields

--- a/CalendarApplication/CalendarApplication/Views/Account/Register.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Account/Register.cshtml
@@ -19,9 +19,10 @@
     @Html.ValidationSummary(true)
     <fieldset>
         <legend>Create new account</legend>
-
+        <div><span style="color:red">*</span> means that the field is required<br /></div>
         <div class="editor-label">
             @Html.LabelFor(model => model.UserName)
+            <span style="color:red">*</span>
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.UserName)
@@ -30,6 +31,7 @@
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Password)
+            <span style="color:red">*</span>
         </div>
         <div class="editor-field">
             @Html.PasswordFor(model => model.Password)
@@ -38,6 +40,7 @@
 
         <div class="editor-label">
             @Html.LabelFor(model => model.PasswordConfirm)
+            <span style="color:red">*</span>
         </div>
         <div class="editor-field">
             @Html.PasswordFor(model => model.PasswordConfirm)
