fixed a few things in database scripts (removing tables etc)
some small changes in web config to allow full error messages

disabled print event function

--- a/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
@@ -105,7 +105,7 @@ else
     <div id="options_pane">
         <table>
             <tr><th>Options</th></tr>
-            <tr><td><input type="button" onclick="printEvent(@(Model.ID))" value="Print Event" style="width:100%" /></td></tr>
+            <tr><td><input type="button" onclick="printEvent(@(Model.ID))" value="Print Event" style="width:100%" disabled="disabled" /></td></tr>
             @if (UserModel.EditAuthentication(Model.ID, UserModel.GetCurrentUserID()))
             {
                 <tr><td>
