Added functionality for changing the order of the fields for a given event type. This is achieved using a fieldOrder column in the eventtypefields table. Two buttons allow the user to move fields up and down and updating their ViewID, which is then added to the db as the fieldOrder. When fetching fields from eventtypefields, one should ORDER BY fieldOrder.

--- a/CalendarApplication/CalendarApplication/Views/Maintenance/FieldDetails.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/FieldDetails.cshtml
@@ -68,9 +68,13 @@
             </div>
         </td>
     </tr>
+    <tr>
+        <td><input type="button" value="up" onclick="moveFieldUp(@Model.ViewID)" /></td>
+        <td><input type="button" value="down" onclick="moveFieldDown(@Model.ViewID)" /></td>
+    </tr>
 </table>
 
 <input type="hidden" id="ID_@(Model.ViewID)" name="TypeSpecific[@(Model.ViewID)].ID" value="@Model.ID" />
-<input type="hidden" id="ViewID_@(Model.ViewID)" name="TypeSpecific[@(Model.ViewID)].ViewID" value="@(Model.Name == ""?"-2":"0")" />
+<input type="hidden" id="ViewID_@(Model.ViewID)" name="TypeSpecific[@(Model.ViewID)].ViewID" value="@(Model.ViewID)" />
 
 <br />
