--- a/CalendarApplication/CalendarApplication/Content/Site.css
+++ b/CalendarApplication/CalendarApplication/Content/Site.css
@@ -201,6 +201,29 @@ div.scroll tr td {
     background-position:center; 
 }
 
+/* Arrows inside divs, for displaying ordering and desc/asc */
+div.up-arrow {
+        display:inline-block;
+        width:30px;
+        height:16px;
+        background-image:url("/Content/images/up.png");
+        background-repeat:no-repeat;
+        background-size:14px;
+        background-position-x:center;
+        background-position-y:bottom;
+}
+
+div.down-arrow {
+    display:inline-block;
+    width:30px;
+    height:16px;
+    background-image:url("/Content/images/down.png");
+    background-repeat:no-repeat;
+    background-size:14px;
+    background-position-x:center;
+    background-position-y:bottom;
+}
+
 /* States */
 span.state_0 {
     background-color: #FFEEEE;
