--- a/CalendarApplication/CalendarApplication/Views/Maintenance/FieldDetails.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/FieldDetails.cshtml
@@ -1,76 +1,87 @@
 ﻿@model CalendarApplication.Models.EventType.FieldDataModel
 
 @using CalendarApplication.Models.EventType;
-
-<table style="border: solid black 1px">
+<table style="margin-left:40px;margin-right:auto">
     <tr>
-        <td><label for='Name_@(Model.ViewID)'>Name of field</label></td>
-        <td><label for='Type_@(Model.ViewID)'>Datatype of field</label></td>
-        <td><label for='Desc_@(Model.ViewID)'>Description of field</label></td>
-        <th rowspan="4" style="vertical-align:middle">
-            <button type="button" onclick=removeField(@(Model.ViewID),@(Model.ID),@((int)Model.Datatype))>Remove</button>
-        </th>
-    </tr>
-    <tr>
-        <td><input type='text' id='Name_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Name' value="@(Model.Name)" onkeypress="$('#Name_@(Model.ViewID)').removeClass('input-validation-error')"></td>
-        <td>
-        @if(Model.ID == -1)
-        {
-            <select id='Type_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Datatype' onchange="updateVarChar(@(Model.ViewID));">
-                @for (int i = 0; i < FieldDataModel.DATA_TYPES.Count; i++)
-                {
-                    //disable files and filelists until they work properly
-                    if(i != 5 && i != 9)
-                    { 
-                        <option value="@(i)" @(i == (int)Model.Datatype?"Selected":"")>@FieldDataModel.DATA_TYPES[i]</option>
+        <td style="padding:0">
+            <table class="button-pane">
+                <tr>
+                    <td onclick="moveFieldUp(@Model.ViewID)"><div class="up-arrow"></div></td>
+                </tr>
+                <tr>
+                    <td onclick="moveFieldDown(@Model.ViewID)"><div class="down-arrow"></div></td>
+                </tr>
+            </table>
+        </td>
+        <td style="padding:0">
+            <table style="border: solid black 1px">
+                <tr>
+                    <td><label for='Name_@(Model.ViewID)'>Name of field</label></td>
+                    <td><label for='Type_@(Model.ViewID)'>Datatype of field</label></td>
+                    <td><label for='Desc_@(Model.ViewID)'>Description of field</label></td>
+                    <th rowspan="4" style="vertical-align:middle">
+                        <button type="button" onclick=removeField(@(Model.ViewID),@(Model.ID),@((int)Model.Datatype))>Remove</button>
+                    </th>
+                </tr>
+                <tr>
+                    <td><input type='text' id='Name_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Name' value="@(Model.Name)" onkeypress="$('#Name_@(Model.ViewID)').removeClass('input-validation-error')"></td>
+                    <td>
+                    @if(Model.ID == -1)
+                    {
+                        <select id='Type_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Datatype' onchange="updateVarChar(@(Model.ViewID));">
+                            @for (int i = 0; i < FieldDataModel.DATA_TYPES.Count; i++)
+                            {
+                                //disable files and filelists until they work properly
+                                if(i != 5 && i != 9)
+                                { 
+                                    <option value="@(i)" @(i == (int)Model.Datatype?"Selected":"")>@FieldDataModel.DATA_TYPES[i]</option>
+                                }
+                            }
+                        </select>
                     }
-                }
-            </select>
-        }
-        else
-        {
-            @FieldDataModel.DATA_TYPES[(int)Model.Datatype]
-            <input type="hidden" name='TypeSpecific[@(Model.ViewID)].Datatype' value="@((int)Model.Datatype)" />
-        }
+                    else
+                    {
+                        @FieldDataModel.DATA_TYPES[(int)Model.Datatype]
+                        <input type="hidden" name='TypeSpecific[@(Model.ViewID)].Datatype' value="@((int)Model.Datatype)" />
+                    }
+                    </td>
+                    <td rowspan="3"><div id="Desc_@(Model.ViewID)_char_counter">Characters left: @(100 - (String.IsNullOrEmpty(Model.Description) ? 0 : Model.Description.Length))</div>
+                        <textarea id='Desc_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Description'
+                           cols="40" rows="4" onkeyup="updateCounter('Desc_@(Model.ViewID)',100);">@(Model.Description)</textarea></td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type='checkbox' id='Reqc_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].RequiredCreate'
+                        @(Model.RequiredCreate?" checked":"") value="true" onclick='updateReqForAppr(@(Model.ViewID))'>
+                        <label for='Reqc_@(Model.ViewID)'>Required for creation</label>
+                    </td>
+                    <td>
+                        <div id="varchar_label_@(Model.ViewID)">
+                            @if (Model.Datatype == Fieldtype.Text)
+                            {
+                                <label>Max size of input:</label>
+                            }
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="text-align:center">
+                        <input type='checkbox' id='Reqa_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].RequiredApprove'
+                        @(Model.RequiredApprove?" checked":"") value="true" @(Model.RequiredCreate?" disabled='true'":"")>
+                        <label for='Reqa_@(Model.ViewID)'>Required for approval</label>
+                    </td>
+                    <td>
+                        <div id="varchar_input_@(Model.ViewID)">
+                            @if (Model.Datatype == Fieldtype.Text)
+                            {
+                                <input type='text' id='varchar_size_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].VarcharLength'
+                                    value="@Model.VarcharLength" style="width:50px" onchange="varCharLimit(@(Model.ViewID),@Model.VarcharLength)">
+                            }
+                        </div>
+                    </td>
+                </tr>
+            </table>
         </td>
-        <td rowspan="3"><div id="Desc_@(Model.ViewID)_char_counter">Characters left: @(100 - (String.IsNullOrEmpty(Model.Description) ? 0 : Model.Description.Length))</div>
-            <textarea id='Desc_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Description'
-               cols="40" rows="4" onkeyup="updateCounter('Desc_@(Model.ViewID)',100);">@(Model.Description)</textarea></td>
-    </tr>
-    <tr>
-        <td>
-            <input type='checkbox' id='Reqc_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].RequiredCreate'
-            @(Model.RequiredCreate?" checked":"") value="true" onclick='updateReqForAppr(@(Model.ViewID))'>
-            <label for='Reqc_@(Model.ViewID)'>Required for creation</label>
-        </td>
-        <td>
-            <div id="varchar_label_@(Model.ViewID)">
-                @if (Model.Datatype == Fieldtype.Text)
-                {
-                    <label>Max size of input:</label>
-                }
-            </div>
-        </td>
-    </tr>
-    <tr>
-        <td style="text-align:center">
-            <input type='checkbox' id='Reqa_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].RequiredApprove'
-            @(Model.RequiredApprove?" checked":"") value="true" @(Model.RequiredCreate?" disabled='true'":"")>
-            <label for='Reqa_@(Model.ViewID)'>Required for approval</label>
-        </td>
-        <td>
-            <div id="varchar_input_@(Model.ViewID)">
-                @if (Model.Datatype == Fieldtype.Text)
-                {
-                    <input type='text' id='varchar_size_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].VarcharLength'
-                        value="@Model.VarcharLength" style="width:50px" onchange="varCharLimit(@(Model.ViewID),@Model.VarcharLength)">
-                }
-            </div>
-        </td>
-    </tr>
-    <tr>
-        <td><input type="button" value="up" onclick="moveFieldUp(@Model.ViewID)" /></td>
-        <td><input type="button" value="down" onclick="moveFieldDown(@Model.ViewID)" /></td>
     </tr>
 </table>
 
