Updated code to store first and last name for a user instead of just one real name

--- a/CalendarApplication/CalendarApplication/Views/Home/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
 }
 else {
     UserModel user = UserModel.GetCurrent();
-    <h2>Welcome @user.RealName</h2>
+    <h2>Welcome @user.FirstName</h2>
     
     <text>
         You may view upcoming events using the
