--- a/CalendarApplication/CalendarApplication/Views/User/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/User/Index.cshtml
@@ -89,9 +89,13 @@ else {
     <table style="margin-left:40px;margin-right:auto">
         <tr>
             <td id="data" style="padding-right:100px">
-                <b>Name</b>
+                <b>First Name</b>
                 <br />
-                @Model.RealName
+                @Model.FirstName
+                <br />
+                <br />
+                <b>Last Name</b>
+                @Model.LastName
                 <br />
                 <br />
                 <b>Email</b>
