--- a/CalendarApplication/CalendarApplication/Views/Account/EditUser.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Account/EditUser.cshtml
@@ -23,9 +23,16 @@
 <div class="validation-summary-errors" id="basic_error"></div>
 
 <fieldset>
-    <legend>Name</legend>
-    @Html.TextBoxFor(m => m.RealName, new { onkeydown = "statusChanged('name-input')" })
-    <input type="button" value="Save" onclick="updateName(@Model.ID,$('#RealName').val())"/>
+    <legend>First Name</legend>
+    @Html.TextBoxFor(m => m.FirstName, new { onkeydown = "statusChanged('name-input')" })
+    <input type="button" value="Save" onclick="updateFirstName(@Model.ID,$('#FirstName').val())"/>
+    <div id="name-input" class="tick" style="height:26px;width:26px;display:inline-block"></div>
+</fieldset>
+
+<fieldset>
+    <legend>Last Name</legend>
+    @Html.TextBoxFor(m => m.LastName, new { onkeydown = "statusChanged('name-input')" })
+    <input type="button" value="Save" onclick="updateLastName(@Model.ID,$('#LastName').val())"/>
     <div id="name-input" class="tick" style="height:26px;width:26px;display:inline-block"></div>
 </fieldset>
 
